fix: SEO and accessibility metrics/ bg contrast on calories result

--- a/main.css
+++ b/main.css
@@ -137,7 +137,7 @@ button:active {
 .calories-result {
     font-size: 32px;
     padding: 20px;
-    color: #cb8589;
+    color: #000;
 }
 
 .circle {
